# plore

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
samples/: test.csv
sidecar/: sidecar.py
src/: extension.ts
